collapse: fixed

--- a/css/main.css
+++ b/css/main.css
@@ -6818,17 +6818,14 @@ footer:after {
   .section-footer-responsive {
     display: none;
   }
-  .section-footer {
+  .section-footer-responsive-wrapper {
     width: 100%;
   }
-}
-@media (max-width: 1024px) {
-  .footer-full {
-    width: 59%;
-    float: right;
+  .container-lg {
+    width: 100%;
   }
-  .section-footer-responsive {
-    display: none;
+  .social {
+    padding: 0px !important;
   }
 }
 @media (max-width: 768px) {
@@ -7498,6 +7495,9 @@ dd.p-0 {
     width: 89% !important;
     margin: 0px !important;
     padding-left: 15px !important;
+  }
+  #collapse {
+    display: none;
   }
 }
 @media (max-width: 768px) and (min-width: 641px) {
