--- a/less/modules/footer.less
+++ b/less/modules/footer.less
@@ -91,19 +91,17 @@ footer{
 	.section-footer-responsive {
 		display: none;
 	}
-	.section-footer {
+	.section-footer-responsive-wrapper {
 		width: 100%;
 	}
-}
-@media (max-width: 1024px) {
-	.footer-full {
-		width: 59%;
-  		float: right;
+	.container-lg {
+		width: 100%;
 	}
-	.section-footer-responsive {
-		display: none;
+	.social {
+		padding: 0px !important;
 	}
 }
+
 @media (max-width: 768px) {
 	.row {
 		text-align: center;
